--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "tests.js",
   "scripts": {
     "test": "jest",
     "watch": "jest --watch *.js"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.6",
     "jest": "^30.2.0"
   }
 }
